--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,20 @@ button {
 button:hover {
   background-color: #a3b0a0;
 }
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.contact-detail-group {
+  display: flex;
+}
+
+.contact-detail-group select {
+  margin-right: 10px;
+}
+
+.contact-detail-group input {
+  flex: 1;
+}
